# ServerSiryogiAndVityi

./: .gitignore  CMakeLists.txt  README.md
WebServer/App/: App.cpp  App.h
WebServer/Enums/: HttpMethods.cpp  HttpMethods.h  HttpStatus.h  HttpVersions.cpp  HttpVersions.h
WebServer/HttpRequest/: HttpRequest.cpp  HttpRequest.h
WebServer/HttpResponse/: HttpResponse.cpp  HttpResponse.h
WebServer/HttpStatusCodes/: HttpStatusCodes.h
WebServer/Responses/HTMLResponse/: HTMLResponse.cpp  HTMLResponse.h
WebServer/Responses/Response/: Response.cpp  Response.h
WebServer/Responses/StaticResponse/: StaticResponse.cpp  StaticResponse.h
WebServer/Router/: Router.cpp  Router.h
WebServer/Socket/: Socket.cpp  Socket.h
main/: main.cpp  main.vcxproj  server.cpp
serverBiba/: biba.cpp
src/server/: biba.cpp
static/html/: index.html
templates/: index.html
